# ShitHead-card-game

./: .gitignore  README.md  preferences.json  project_client.py  project_server.py  pyproject.toml  requirements-dev.txt  run_local_test.py
ShitHead Client/: button.py  cards.py  game.py  preferences.json  project_client.py  tcp_by_size.py
ShitHead Client/pages/: __init__.py  _client_ref.py  choose_room_page.py  create_room_page.py  finish_page.py  game_page.py  gameplay_pages.py  menu_pages.py  open_page.py  rules_page.py  settings_page.py  waiting_page.py
ShitHead Server/: game.py  project_server.py  tcp_by_size.py
common/: net_protocol.py
