[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shithead-card-game"
version = "0.1.0"
description = "Legacy client/server card game modernized for Python 3"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pygame>=2.6.1,<3",
]

[project.optional-dependencies]
dev = [
  "black>=25.0.0,<26",
  "ruff>=0.6.0,<1",
]

[tool.setuptools]
packages = []
py-modules = []

[tool.black]
line-length = 79
target-version = ["py310"]
include = "\\.pyi?$"
exclude = '''
/(\
    \.git
  | \.venv
  | __pycache__
  | \.idea
)/
'''

[tool.ruff]
line-length = 79

[tool.ruff.lint]
select = ["E", "F"]
ignore = ["E501"]
